# orstacean

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix
.cargo/: config.toml
src/: app.rs  main.rs
src/app/: chat_box.rs  dashboard.rs  input.rs
src/app/puzzles/: maze.rs  mod.rs  riddles.rs  timer.rs  word_match.rs
src/app/puzzles/riddles/: list.rs
