[package]
name = "origins-crabby"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.2"
color-eyre = "0.6.5"
crossterm = "0.29.0"
image = "0.25.10"
num-traits = "0.2.19"
rand = "0.10.2"
ratatui = "0.30.2"
ratatui-comfy-toaster = "0.6.2"
ratatui-form = { git = "https://github.com/Daru-san/ratatui-form.git", version = "0.1.1" }
ratatui-hypertile = "0.4.0"
ratatui-image = "11.0.6"
ratatui-textarea = "0.9.2"
serde_json = "1.0.150"
tui-spinner = "0.4.0"
unicode-width = "0.2.2"
