[package]
name = "orstacean"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.2"
color-eyre = "0.6.5"
crossterm = "0.29.0"
image = "0.25.10"
knossos = "1.2.0"
num-traits = "0.2.19"
rand = "0.10.2"
ratatui = {version = "0.30.2", features = ["unstable-rendered-line-info"]}
ratatui-comfy-toaster = "0.6.2"
ratatui-form = { git = "https://github.com/Daru-san/ratatui-form.git", version = "0.1.1" }
ratatui-hypertile = "0.4.0"
ratatui-image = "11.0.6"
ratatui-splash-screen = { version = "0.1.5", features = ["png", "jpeg"] }
ratatui-textarea = "0.9.2"
serde_json = "1.0.150"
tui-popup = "0.7.6"
tui-scrollview = "0.6.7"
tui-spinner = "0.4.0"
unicode-width = "0.2.2"

[profile.release]
lto = "thin"
debug-assertions = false
overflow-checks = false
debug = "none"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"
